--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
     <title>ООО "ЭСМА"</title>
     <style>
+
+        @media screen and (min-width: 768px) {
+            .container {
+                width: 70%;
+            }
+            h1 {
+                font-size: 36px;
+            }
+            /* Add other styles for larger screens */
+        }
+
+        /* Styles for smaller screens */
+        @media screen and (max-width: 768px) {
+            .container {
+                width: 90%;
+            }
+            h1 {
+                font-size: 24px;
+            }
+            /* Add other styles for smaller screens */
+        }
+
         /* Add CSS styles for the hidden paragraphs and images */
         body {
             background-color: #000; /* Set black background color for the body */
@@ -28,6 +50,8 @@
             color: #000; /* Set text color to black */
             padding: 20px; /* Adjust the padding as needed */
         }
+
+
 
         /* Style for the image grid */
         .image-grid {
@@ -71,7 +95,7 @@
     <div id="welcome">
         <br>
         <br>
-        <h1>ООО "ЭСМА"</h1>
+        <h1>ЭСМА</h1>
         <p class="hello">Ваши корабли, наше качество.</p>
         <br>
         <p class="description">Компания 'ЭСМА' - ваш партнер в морской инженерии и строительстве на кораблях с 2008 года. Мы специализируемся на предоставлении разнообразных инженерных и строительных услуг для судов и кораблей. Наша команда высококвалифицированных специалистов готова обеспечить безопасность, надежность и качество для вашего морского бизнеса.</p>
